--- a/app/src/main/res/layout/contents_main_contents_info.xml
+++ b/app/src/main/res/layout/contents_main_contents_info.xml
@@ -66,8 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:src="@drawable/ic_view_black_24dp"
-        app:layout_constraintLeft_toRightOf="@+id/contents_main_info_img"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
+        app:layout_constraintLeft_toRightOf="@+id/contents_main_info_img"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_author" />
 
     <TextView
@@ -76,28 +76,26 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="123,123"
-        app:layout_constraintLeft_toRightOf="@+id/contents_main_info_view"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
+        app:layout_constraintLeft_toRightOf="@+id/contents_main_info_view"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_author" />
 
     <ImageView
-        android:src="@drawable/ic_favorite_border_black_24dp"
         android:id="@+id/contents_main_info_like_img"
-        app:layout_constraintRight_toLeftOf="@+id/contents_main_info_like_num"
-        app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
-        app:layout_constraintTop_toBottomOf="@id/contents_main_info_author"
-        android:layout_marginRight="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginRight="15dp"
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
+        app:layout_constraintRight_toLeftOf="@+id/contents_main_info_like_num"
+        app:layout_constraintTop_toBottomOf="@id/contents_main_info_author" />
 
     <TextView
         android:id="@+id/contents_main_info_like_num"
-        android:text="1698"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
+        android:text="1698"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
-        app:layout_constraintTop_toBottomOf="@id/contents_main_info_author"
-        />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contents_main_info_author" />
 </android.support.constraint.ConstraintLayout>
