--- a/app/src/main/res/layout/main_discount_contents.xml
+++ b/app/src/main/res/layout/main_discount_contents.xml
@@ -37,16 +37,17 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/main_discount_view_all"
+            android:id="@+id/main_discount_view_all_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/main_discount_first_third_text"
             android:text="전체보기" />
 
         <ImageView
+            android:id="@+id/main_discount_view_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/main_discount_view_all"
+            android:layout_toRightOf="@id/main_discount_view_all_text"
             android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
     </LinearLayout>
 
@@ -54,7 +55,16 @@
         android:id="@+id/main_discount_pager"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/main_discount_first_third_text"/>
+        android:layout_height="370dp"
+        android:layout_below="@+id/main_discount_first_third_text">
+    </android.support.v4.view.ViewPager>
+
+    <org.techtown.ideaconcert.MainActivityDir.CircleAnimIndicator
+        android:id="@+id/circleAnimIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_discount_pager"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp" />
 
 </RelativeLayout>
