메인 페이지 수정 완료

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,13 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/main_pager"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="210dp"
             android:background="#ece6e6"
             app:layout_constraintTop_toBottomOf="@+id/main_titlebar" />
 
-
         <LinearLayout
             android:id="@+id/main_category_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,23 +33,26 @@
 
             <TextView
                 android:id="@+id/main_pop"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="인기"
+                android:layout_weight="1"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/main_love"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_margin="10dp"
                 android:text="연애"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/main_edu"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="학원"
@@ -58,41 +60,41 @@
 
             <TextView
                 android:id="@+id/main_chivalry"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_weight="1"
                 android:text="무협"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/main_action"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_weight="1"
                 android:text="액션"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/main_comic"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_weight="1"
                 android:text="코믹"
                 android:textSize="15dp" />
 
+            <Button
+                android:id="@+id/main_open_category"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@drawable/ic_open_icon"/>
+
         </LinearLayout>
 
-        <Button
-            android:id="@+id/main_open_category"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="2dp"
-            android:background="@drawable/ic_open_icon"
-            android:baselineAlignBottom="true"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_pager" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/main_category_recycler"
@@ -103,24 +105,7 @@
             app:layout_constraintTop_toBottomOf="@+id/main_category_layout" />
 
         <TextView
-            android:id="@+id/main_txt_viewall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="전체보기"
-            app:layout_constraintRight_toLeftOf="@+id/main_category_open_btn"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
-
-        <ImageView
-            android:id="@+id/main_category_open_btn"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:src="@drawable/ic_next_icon"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
-
-        <TextView
+            android:layout_marginTop="10dp"
             android:id="@+id/main_sub_add_banner"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -129,19 +114,20 @@
             android:text="서브 광고 배너"
             android:textAlignment="center"
             android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
         <ImageButton
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="18dp"
             android:src="@drawable/ic_cancel_icon"
             app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
         <TextView
             android:id="@+id/main_newarrival_text"
             android:layout_width="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:text="이달의 신작보기"
             android:textSize="20dp"
@@ -181,18 +167,18 @@
 
         <TextView
             android:id="@+id/main_event_text"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="오늘의 이벤트"
             android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@id/main_recommend_include" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/main_event_pager"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_event_recycler"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="#ffe0e0"
+            android:background="#fdceca"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/main_event_text" />
 
         <include
@@ -202,7 +188,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:layout_marginBottom="80dp"
-            app:layout_constraintTop_toBottomOf="@id/main_event_pager" />
+            app:layout_constraintTop_toBottomOf="@id/main_event_recycler" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
