--- a/app/src/main/res/layout/contents_main_custom_title_bar.xml
+++ b/app/src/main/res/layout/contents_main_custom_title_bar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/contents_main_back"
@@ -14,12 +13,13 @@
         android:src="@drawable/ic_navigate_before_black_24dp" />
 
     <TextView
-        android:text="작품명 들어갈 자리입니다."
-        android:layout_toRightOf="@+id/contents_main_back"
-        android:layout_centerVertical="true"
-        android:textStyle="bold"
+        android:id="@+id/contents_main_title_bar_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/contents_main_back"
+        android:text="작품명 들어갈 자리입니다."
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="wrap_content"
