--- a/app/src/main/res/layout/webtoon_contents_num_item.xml
+++ b/app/src/main/res/layout/webtoon_contents_num_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/contents_main_item_linear"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="50dp"
     android:orientation="horizontal">
 
     <TextView
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:background="#a0000000"
-        android:text="New Text"
+        android:text="0"
         android:textColor="#ffffff"
         android:textSize="15dp" />
 
