컨텐츠 메인 페이지 구현 완료

--- a/app/src/main/res/layout/contents_main_custom_title_bar.xml
+++ b/app/src/main/res/layout/contents_main_custom_title_bar.xml
@@ -31,7 +31,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/contents_main_heart"
+            android:id="@+id/contents_main_like"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginRight="5dp"
