--- a/app/src/main/res/layout/activity_contents_main.xml
+++ b/app/src/main/res/layout/activity_contents_main.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     tools:context=".ContentsMainDir.ContentsMainActivity">
 
     <include
         android:id="@+id/contents_main_title_bar"
         layout="@layout/contents_main_custom_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true" />
 
     <include
@@ -18,16 +17,19 @@
         layout="@layout/contents_main_contents_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/contents_main_title_bar" />
+        android:layout_below="@id/contents_main_title_bar"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/contents_main_summary"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/contents_main_info"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:ellipsize="end"
         android:maxLines="3"
-        android:text="사파무림의 최강자로 군림하고 있는 천잔왕 구휘가 어느 날, 새파랗게 젊은 현상금 사냥꾼 용비라는 자에게 체포되어 관청에 넘겨지는 믿지 못한 사건이 일어난다. 용비는 무림인 들에겐 전혀 상대가 되지 못하는데 다음 쓸말이 없다."
         android:textSize="14.74dp" />
 
     <Button
@@ -43,19 +45,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/contents_main_open_summary_btn"
-        android:orientation="horizontal">
+        android:background="#efefef"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp">
 
         <Button
             android:id="@+id/contents_main_first_episode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#786aaa"
+            android:background="#ffffff"
             android:text="첫화보기" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#fefefe"
+            android:background="#786aaa"
             android:text="이어보기" />
     </LinearLayout>
 
@@ -66,11 +77,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/contents_main_2btn_layout" />
 
+    <View
+        android:id="@+id/contents_main_dummy_view"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@id/contents_main_usage"
+        android:background="#efefef" />
+
     <include
         android:id="@+id/contents_main_works_list"
         layout="@layout/contents_main_works_list"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/contents_main_usage" />
+        android:layout_below="@+id/contents_main_dummy_view" />
 
 </RelativeLayout>
