--- a/app/src/main/res/layout/contents_main_contents_info.xml
+++ b/app/src/main/res/layout/contents_main_contents_info.xml
@@ -33,9 +33,9 @@
         android:id="@+id/contents_main_info_writer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
         android:text="홍길동"
-        android:textColor="#89e2fa"
+        android:textColor="#1d68bf"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_txt1"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_title" />
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="그림 : "
+        android:text="   그림 : "
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_writer"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_title" />
 
@@ -53,9 +53,9 @@
         android:id="@+id/contents_main_info_painter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
         android:text="홍길동"
-        android:textColor="#89e2fa"
+        android:textColor="#1d68bf"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_txt2"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_title" />
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="123,123"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_view"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_painter" />
@@ -84,17 +84,16 @@
         android:id="@+id/contents_main_info_like_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
         android:src="@drawable/ic_favorite_border_black_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
-        app:layout_constraintRight_toLeftOf="@+id/contents_main_info_like_num"
+        app:layout_constraintRight_toLeftOf="@+id/contents_main_info_like_count"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_painter" />
 
     <TextView
-        android:id="@+id/contents_main_info_like_num"
+        android:id="@+id/contents_main_info_like_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1698"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_painter" />
