--- a/app/src/main/res/layout/contents_main_works_list.xml
+++ b/app/src/main/res/layout/contents_main_works_list.xml
@@ -4,26 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/contents_main_list_total_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="전체(xx화)" />
+    <RelativeLayout
+        android:id="@+id/contents_main_list_top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
 
-    <Spinner
-        android:id="@+id/contents_main_list_sort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:entries="@array/sort_method"
-        android:text="전체(xx화)" />
+        <TextView
+            android:id="@+id/contents_main_list_total_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="전체(xx화)" />
+
+        <Spinner
+            android:id="@+id/contents_main_list_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"/>
+
+        <View
+            android:id="@+id/contents_main_list_underline"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="#cfcfcf" />
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/contents_main_list_works_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/contents_main_list_sort" />
+        android:layout_below="@+id/contents_main_list_top_layout" />
 
 </RelativeLayout>
