--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -1,110 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/contents_main_item_linear"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:orientation="horizontal">
+    android:layout_height="70dp">
 
     <ImageView
         android:id="@+id/contents_main_item_image"
-        android:layout_height="70dp"
         android:layout_width="70dp"
-        android:layout_gravity="center"/>
+        android:layout_height="70dp"
+        android:src="@drawable/dummy_cate_cont" />
 
-    <LinearLayout
-        android:layout_marginLeft="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="25"
-        android:orientation="vertical">
-
-        <TextView
+    <TextView
         android:id="@+id/contents_main_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:gravity="center_vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="7dp"
+        android:layout_toRightOf="@id/contents_main_item_image"
         android:text="작품명"
-        android:textColor="#000000"
-        android:textSize="24dp" />
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/contents_main__layout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/contents_main_layout2"
+        android:layout_toRightOf="@id/contents_main_item_image"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/contents_main_star_image"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_star_yellow_24dp" />
+
+        <TextView
+            android:id="@+id/contents_main_star_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="7dp"
+            android:text="10"
+            android:textColor="#e90005"
+            android:textSize="10.9dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/contents_main__layout2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="7dp"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_eye_black_24dp" />
+
+            <TextView
+                android:id="@+id/contents_main_item_watch"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:text="0"
+                android:textSize="10.9dp" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_eye_black_24dp" />
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/ic_comment_black_24dp" />
 
-                <TextView
-                    android:id="@+id/contents_main_item_watch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="View Cnt"
-                    android:textColor="#666666" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/contents_main_item_comments_num"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_star_yellow_24dp" />
-
-                <TextView
-                    android:id="@+id/contents_main_item_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="10.0" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_comment_black_24dp" />
-
-                <TextView
-                    android:id="@+id/contents_main_item_comments_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="10.0" />
-            </LinearLayout>
+                android:layout_gravity="center"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="0"
+                android:textSize="10.9dp" />
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/contents_main_item_cash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="2"
-        android:src="@drawable/ic_money_yellow_24dp" />
+    <RelativeLayout
+        android:id="@+id/contents_main_layout2"
+        android:layout_width="55dp"
+        android:layout_height="70dp"
+        android:layout_alignParentRight="true"
+        android:background="#786aaa">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/contents_main_item_cash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:drawableTop="@drawable/ic_money_yellow_24dp"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="#ffffff" />
+    </RelativeLayout>
+</RelativeLayout>
