--- a/app/src/main/res/layout/login_method_fragment.xml
+++ b/app/src/main/res/layout/login_method_fragment.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginDir.LoginMethodActivity">
+    tools:context=".SettingsDir.SettingsActivity">
 
     <RelativeLayout
         android:id="@+id/btn_relative_layout"
@@ -35,7 +34,7 @@
                 android:layout_marginLeft="10dp" />
 
             <Button
-                android:background="@drawable/moonlight_01_04"
+                android:text="Moonlight Login"
                 android:layout_width="match_parent"
                 android:layout_height="50dp" />
         </LinearLayout>
