--- a/app/src/main/res/layout/settings_login_info_layout.xml
+++ b/app/src/main/res/layout/settings_login_info_layout.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@android:id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_marginTop="5dp"
-        android:text="로그인 정보"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/settings_title_bar_login_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/settings_title_bar_underline"
-        android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        android:layout_marginTop="5dp"
         android:textColor="#1d68bf"
-        android:text="로그인이 필요합니다." />
+        android:textSize="14sp"
+        android:id="@android:id/summary"
+        android:layout_margin="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
+    <ImageView
+        android:id="@android:id/icon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_toLeftOf="@android:id/summary"/>
 </RelativeLayout>
