--- a/app/src/main/res/layout/fragment_my_page1_recent_view_works.xml
+++ b/app/src/main/res/layout/fragment_my_page1_recent_view_works.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyPageDir.Fragment1RecentViewWorks">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_page_fragment1_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="fragment1" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</RelativeLayout>
